# Nvim-Configuration

./: README.md  init.vim
lua/: path_script.lua  update_path.pl
lua/themes/: catppuccin_config.lua  configs.lua  dirs.pl  gruvbox_config.lua
lua/toggle_cmp/: funcs.lua
scripts/: start.bash
syntax/: synload.vim
templates/: CMakeLists.txt  main.cpp  makefile
